自定义头像之前

--- a/fisher/app/templates/test.html
+++ b/fisher/app/templates/test.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>test lel</title>
+    <title>kitty</title>
 </head>
 <body>
-hi lele
-{{data.age}}
+catleer
+{{ data.age }}
 {% set messages = get_flashed_messages() %}
 {{ messages }}
+{#Jinja2#}
 </body>
 </html>
